catch exception in some task